Tue Dec 26 17:07:11 CST 2000 Adam Heath <doogie@debian.org>

  * lib/md5.c, lib/md5.h: Oops, forgot to add these files.

Tue Dec 26 08:28:17 CST 2000 Adam Heath <doogie@debian.org>

  * main/main.c: Removed extraneous debug prints, that displayed the
    state of all force options.  Doh!

Tue Dec 26 04:34:02 CST 2000 Adam Heath <doogie@debian.org>

  * lib/fields.c, lib/parsehelp.c, include/dpkg-db.h: Increased the
    speed of convert_string() by a factor of 2, by storing the length
    of each string inside the struct(this function is used to convert
    strings into integer values).

Tue Dec 26 03:43:17 CST 2000 Adam Heath <doogie@debian.org>

  * acconfig.h, config.h.bot, configure.in, main/filesdb.c,
    automake/sysinfo.m4(removed): Removed all references to
    sysinfo().

Tue Dec 26 03:24:38 CST 2000 Adam Heath <doogie@debian.org>

  * main/main.c, main/files.c: Removed --smallmem code.

Mon Dec 25 00:46:47 CST 2000 Adam Heath <doogie@debian.org>

  * utils/md5sum.c: Don't use FILE * in mdfile.

Mon Dec 25 00:31:05 CST 2000 Adam Heath <doogie@debian.org>

  * include/dpkg.h.in, lib/mlib.c: Added generic setup code to buffer
    copy loop.

Sun Dec 24 23:48:45 CST 2000 Adam Heath <doogie@debian.org>

  * include/dpkg.h.in, lib/Makefile.in, lib/mlib.c, utils/Makefile.in,
    utils/md5sum.c: Moved md5 code into generic buffer_copy loop.

Sun Dec 24 13:59:36 CST 2000 Adam Heath <doogie@debian.org>

  * Use DESTDIR when installing /etc/dpkg/origins/dpkg

Sun Dec 24 17:35:12 CET 2000 Wichert Akkerman <wakkerma@debian.org>

  * dselect/main.cc: make commandline options work again
  * Makefile.conf.in, configure.in,automake/dpkg.m4: revert changes from Adam
  * Makefile.conf.in: add @CWARNS@ to CFLAGS
  * configure.in: add AC_SUBST for CWARNS

Sun Dec 24 17:05:45 CET 2000 Wichert Akkerman <wakkerma@debian.org>

  * scripts/dpkg-genchanges.pl: output descriptions for udebs as well

Sun Dec 24 06:31:55 CST 2000 Adam Heath <doogie@debian.org>
