@@ -1,3 +1,7 @@
+Wed Dec 27 04:00:32 CST 2000 Adam Heath <doogie@debian.org>
+
+  * lib/nfmalloc.c: Added nfstrnsave().
+
 Tue Dec 26 17:07:11 CST 2000 Adam Heath <doogie@debian.org>
 
   * lib/md5.c, lib/md5.h: Oops, forgot to add these files.
